# model-viewer

./: .gitignore  CMakeLists.txt  main.cpp  main_observer.cpp  main_observer.hpp  sdl_message_handler.cpp  sdl_message_handler.hpp
gui/: gfx_sdl.cpp  gfx_sdl.hpp
